--- a/emoteam-functions/requirements.txt
+++ b/emoteam-functions/requirements.txt
@@ -1,5 +1,29 @@
-# DO NOT include azure-functions-worker in this file
-# The Python Worker is managed by Azure Functions platform
-# Manually managing azure-functions-worker may cause unexpected issues
-
-azure-functions
+azure-core==1.30.1
+azure-functions==1.18.0
+azure-storage-blob==12.19.1
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.5
+filelock==3.13.3
+fsspec==2024.3.1
+idna==3.6
+isodate==0.6.1
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.3
+numpy==1.26.4
+pandas==2.2.1
+pillow==10.3.0
+pycparser==2.22
+python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.31.0
+scipy==1.13.0
+six==1.16.0
+sympy==1.12
+torch @ https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.2.0%2Bcpu.cxx11.abi-cp311-cp311-linux_x86_64.whl
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
