--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 .vscode
 .cache
 .DS_Store
+__azurite_db_blob__.json
+__azurite_db_blob_extent__.json
+__azurite_db_queue__.json
+__azurite_db_queue_extent__.json
+__azurite_db_table__.json
